<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="title_activity_tourist">TouristActivity</string>
    <string name="loadingText">Loading...</string>
    <string name="touristBtnText">Tourist&#10;Police</string>
    <string name="locationBtnText">Map</string>
    <string name="visitKoreaBtnText">Visit Korea&#10;Website</string>
    <string name="embassiesBtnText">Embassies</string>
    <string name="callTouristPoliceBtnText">Call Tourist Police</string>
</resources>
