<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="5"
    tools:context="com.example.user.myapplication.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:text="TextView" />

    <Button
        android:id="@+id/TouristBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/touristBtnText" />
    <Button
        android:id="@+id/locationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/locationBtnText" />
    <Button
        android:id="@+id/visitKoreaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/visitKoreaBtnText" />
    <Button
        android:id="@+id/embassiesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/embassiesBtnText" />
    <Button
        android:id="@+id/callTouristPoliceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:text="@string/callTouristPoliceBtnText" />
</RelativeLayout>
